@@ -13,6 +13,9 @@
 
   \item{G2}{logical; estimate the G2 model fit statistic?}
 
+  \item{cl}{a cluster object from the \code{parallel}
+  package}
+
   \item{...}{parameters that are passed}
 }
 \value{
@@ -33,7 +36,13 @@
 \examples{
 \dontrun{
 
-mod1withLogLik <- calcLogLik(mod1, draws = 5000)
+# no parallel
+mod1withLogLik <- calcLogLik(mod1, draws=5000)
+
+#with parallel using 4 cores
+library(parallel)
+cl <- makeCluster(4)
+mod1withLogLik <- calcLogLik(mod1, draws=5000, cl=cl)
 
   }
 }
